# cf-avoiding-dns-enum

./: .gitignore  Cargo.toml  README.md  subdomains.txt
src/: cf_json.rs  main.rs
src/utils/: mod.rs
