[package]
name = "cf-avoiding-dns-enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = { version = "1.0.108" }
serde = { version = "1.0.193", features = ["derive"] }
iprange = "0.6.7"
ipnet = "2.9.0"
domain = { version = "0.10.1", features = ["resolv"] }
addr = "0.15.6"


[profile.release]
debug = true